--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
+    "leaflet.geodesic": "^2.7.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "openai": "^6.1.0",
